fix & format z-index

--- a/static/style/components/drawer-panel.less
+++ b/static/style/components/drawer-panel.less
@@ -72,8 +72,10 @@
 	width: 100%;
 	height: calc(@drawer-button-height + @drawer-button-bottom);
 	position: absolute;
+	background-color: #ffffff;
 	bottom: 0;
 	z-index: 9;
+	padding-top: 20rpx;
 	.drawer-button {
 		width: calc(100% - @base-gap * 2);
 		height: @drawer-button-height;
